src/styles/style.scss
/* ... */
// Hero Settings
.hero {
    background: #401542;
    overflow: hidden;
    
    .hero-content-box {
        position: relative;
        min-height: 100vh;
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(60rem, 1fr));
        gap: .5rem;
        padding-left: 2rem;
    }

    .content {
        @include flex-center();
        flex-direction: column;
        text-align: center;

        h1 {
            position: relative;
            font-size: 2rem;
            font-family: $fontInter;
            padding-left: 5rem;
            color: $white;

            &::before {
                content: '';
                position: absolute;
                left: 0;
                top: 50%;
                width: 4rem;
                height: 2px;
                background-color: $white1;
            }
        }
        h2 {
            font-size: $title-font-size;
            font-weight: $title-font-weight;
            letter-spacing: .1rem;
            color: $white;
        }
        p {
            color: $white;
        }

        .buttons {
            margin-top: 2rem;
            display: flex;
            gap: 1rem;
        }
    }
    .hero-video {
        position: relative;

        video {
            position: absolute;
            bottom: 0;
            left: 15%;
            width: 72.5%;
        }
    }
}
// pricing begins
.pricing {
    .swiper {
        width: 100%;
        height: 100%;
        padding: 5% 7%;

        .parallax-bg {
            position: absolute;
            left: 0;
            top: 0;
            width: 140%;
            height: 100%;
            background-size: cover;
            background-position: center; 
        }
        .swiper-wrapper {
            .swiper-slide {
                img,video {
                    border: 2px solid $white;
                }
            }
        }
        .swiper-pagination-bullet {
            width: 20px;
            height: 20px;
            text-align: center;
            line-height: 20px;
            font-size: 12px;
            color: $black1;
            opacity: 1;
            background: rgba(0, 0, 0, 0.2);
            }

        .swiper-pagination-bullet-active {
            color: $white;
            background: $pink;
        }
    }
}
// about us section
.about {
    padding: 0 5%;

    .container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
        gap: .5rem;

        .image {
            padding: .5rem;
            background: $pink;
            border-radius: $border-radius;
            
            img {
                box-shadow: $box-shadow;
            }
        }
        .content {
            background: rgba(0, 0, 0, 0.2);
            padding: 1rem;
            display: flex;
            flex-direction: column;
            box-shadow: $box-shadow;

            h3 {
                color: $pink;
                font-weight: bold;
            }
            p {
                padding: .5rem 0;
                font-weight: 600;

                a {
                    color: $pink;
                }
            }
            ul {
                padding: 1rem;
                background:$turquoise-glass;
                box-shadow: $box-shadow;
                border-radius: $border-radius;

                li {
                    font-weight: 600;

                    &:nth-child(1) i {
                            animation-delay: .3s;
                    }
                    &:nth-child(2) i {
                            animation-delay: .6s;
                    }
                    &:nth-child(3) i {
                            animation-delay: .9s;
                    }
                    &:nth-child(4) i {
                            animation-delay: 1.2s;
                    }
                    &:nth-child(5) i {
                            animation-delay: 1.5s;
                    }

                    i {
                        animation: shake 3s linear infinite;
                        padding-right: .5rem;
                        color: $pink;

                        @keyframes shake {
                            0%,100% {
                                transform: translateX(-4px);
                            }
                            50% {
                                transform: translateX(4px);
                            }
                        }
                    }
                }
            }
        }
    }
}
/* ... */

